--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 plugins:
-  - jemoji
+- jemoji
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
